styles/shop.css
/* ... */
#shop #console .event .item_cell_confirm .item_name {
    float: right;
    margin-right: 30px;
}
@media (max-width: 800px){
    #shop #console .event .field_name {
        max-width: 120px;
        max-width: calc(100% - 176px);
    }
}
#shop #console .event .buy_button,
#shop #console .event .sell_button,
#shop #console .event .confirm_button,
#shop #console .event .cancel_button,
#shop #console .event .player_button {
    float: right;
    width: 30px;
    text-transform: uppercase;
    font-size: 10px;
    text-align: center;
    cursor: pointer;
    _cursor: hand;
    opacity: 0.9;
    filter: alpha(opacity=90);
    margin-left: 10px;
}
#shop #console .event .buy_button:hover,
#shop #console .event .sell_button:hover {
    opacity: 1.0;
    filter: alpha(opacity=100);
}
#shop #console .tab_container[data-tab="buying"][data-tab-type="stars"] .sell_button {
    width: 40px;
}
#shop #console .event .confirm_button,
#shop #console .event .cancel_button,
#shop #console .event .player_button {
    margin-left: 20px;
    width: auto;
}
#shop #console .event .cancel_button {
    margin-left: 4px;
}
#shop #console .event .player_button {
    margin-left: 4px;
}
#shop #console .event .player_button_1 {
    /*margin-left: 20px;*/
}
#shop #console .event .player_button_disabled,
#shop #console .event .confirm_button_disabled {
    opacity: 0.3;
    filter: alpha(opacity=30);
    cursor: default;
}
#shop #console .event .item_price,
#shop #console .event .item_quantity,
#shop #console .event .item_owned {
    float: right;
    font-size: 11px;
    color: #FFFFFF;
    border: 0 none transparent;
    padding-right: 0;
}
#shop #console .event .item_cell_confirm .item_price,
#shop #console .event .item_cell_confirm .item_quantity,
#shop #console .event .item_cell_confirm .item_owned {
    margin-left: 10px;
}
#shop #console .event .item_quantity {
    width: 30px;
    text-align: right;
}
#shop #console .event .item_owned {
    width: 52px;
    text-align: right;
}
#shop #console .event .item_owned .player_type {
    font-size: 9px;
}

#shop #console .event .buy_button_header,
#shop #console .event .sell_button_header,
#shop #console .event .confirm_button_header,
#shop #console .event .cancel_button_header {
    border-color: transparent;
    background-color: transparent;
    visibility: hidden;
    margin-bottom: 0;
    color: #868686;
    line-height: 10px;
}
#shop #console .event .item_price_header,
#shop #console .event .item_quantity_header,
#shop #console .event .item_owned_header {
    font-size: 10px;
    line-height: 10px;
    text-align: right;
    margin-bottom: 0;
    color: #868686;

}

#shop #console .header {
    height: auto;
    width: auto;
    float: none;
    box-shadow: 0 0 0 transparent;
    background-image: none;
    font-size: 10px;
    padding: 5px 8px;
    color: #FFFFFF;
    position: relative;
    line-height: 12px;
}
#shop #console .header .title,
#shop #console .header .core {
    position: absolute;
    top: 2px;
    right: 2px;
    padding: 2px 6px;
    background-color: rgba(0, 0, 0, 0.25) !important;
    border-color: rgba(0, 0, 0, 0.25) !important;
    line-height: 12px;
}
#shop #console .header .title {
    position: static;
    font-size: 11px;
}
#shop #console .header .player_type .wrap {
    padding-right: 18px;
    position: relative;
}
#shop #console .header .player_type .wrap .sprite {
    position: absolute;
    background-position: center center;
    top: -12px;
    left: -14px;
}
#shop #console .header .player_type .text {

}

#shop #console .omega.player_type {
    position: relative;
    top: -1px;
    display: inline-block;
    margin-left: 4px;
    box-sizing: border-box;
    width: 14px;
    height: 14px;
    font-size: 10px;
    line-height: 10px;
    direction: ltr;
    padding: 1px 0 0px 2px;
    font-weight: normal;
    font-family: 'Zapf Dingbats';
    border-radius: 7px;
    box-shadow: 1px 1px 0px rgba(0, 0, 0, 0.1);
    border-color: rgba(0, 0, 0, 0.25) !important;
}
#shop #console .omega.player_type:before {
    content: "\03a9";
}

#shop #console .gauge {
    display: block;
    box-sizing: border-box;
    position: absolute;
    z-index: 2;
    left: 6px;
    top: 52px;
    width: 38px;
    min-height: 100px;
    height: auto;
    text-align: center;
    background-color: rgba(0, 0, 0, 0.1);
    border: 1px solid rgba(0, 0, 0, 0.1);
    -moz-border-radius: 2px;
    -webkit-border-radius: 2px;
    border-radius: 2px;
    padding: 4px;
    font-size: 11px;
    line-height: 1.6;
}

#shop #console .gauge.cores {

}
#shop #console .gauge.cores .element {
    display: block;
    margin: 0 auto 4px;
    padding: 0;
    background-color: rgba(0, 0, 0, 0.1);
    border: 1px solid rgba(0, 0, 0, 0.1);
    -moz-border-radius: 2px;
    -webkit-border-radius: 2px;
    border-radius: 2px;
    height: 9px;
    font-size: 9px;
    line-height: 10px;
    text-align: left;
}
#shop #console .gauge.cores .element:after {
    content: "";
    display: block;
    clear: both;
}
#shop #console .gauge.cores .element .sprite {
    display: block;
    float: left;
    background-position: center center;
    position: relative;
    background-color: transparent;
    border: 0 none transparent;
    margin: 0 4px 0 1px;
    width: 6px;
    height: 6px;
    top: 1px;
    padding: 0;
}
#shop #console .gauge.cores .element .count {
    display: block;
    float: left;
    vertical-align: middle;
    text-align: center;
    margin: 0;
    font-size: 8px;
    line-height: 9px;
    width: 14px;
}


#console .ps-container {

}
#console .ps-container > .ps-scrollbar-y-rail {
    background-color: #494949;
    opacity: 0.3;
    filter: alpha(opacity=30);
}
#console .ps-container > .ps-scrollbar-y-rail > .ps-scrollbar-y {

}
#console .ps-container:hover > .ps-scrollbar-y-rail:hover {
    background-color: #363636;
}
#console .ps-container.ps-in-scrolling.ps-y > .ps-scrollbar-y-rail {
    background-color: #696969;
}
/* ... */

